home components added

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -5,12 +5,11 @@ $clr_white: #fff;
 $clr_green: #7ee787;
 $clr_grey_500: #6b7280;
 $clr_bgd: #0d1117;
+$clr_border: #30363d;
+$clr_grey: #7d8590;
 
 $accent-brand-primary: #635bff;
 $clr_primary: #939aff;
-
-// $clr_light_grey: #f6f6fb;
-// $clr_border: #e9ebec;
 
 // Font family
 $font-family-primary: 'Inter', sans-serif;
