--- a/src/pages/Home/components/hero/hero.scss
+++ b/src/pages/Home/components/hero/hero.scss
@@ -11,6 +11,7 @@
     padding-top: 250px;
     @include flex;
     gap: 146px;
+    position: relative;
 
     div {
       h1 {
@@ -19,11 +20,37 @@
         font-weight: 600;
         line-height: 80px;
         max-width: 896px;
+        margin-bottom: 40px;
       }
     }
     img {
       width: 366px;
       object-fit: cover;
+      z-index: 5;
+    }
+
+    .hero-img-1,
+    .hero-img-2,
+    .hero-img-3 {
+      position: absolute;
+      z-index: 0;
+      object-fit: cover;
+    }
+
+    .hero-img-1 {
+      top: 24%;
+      right: 17%;
+      width: 242px;
+    }
+    .hero-img-2 {
+      bottom: -24%;
+      right: 27%;
+      width: 342px;
+    }
+    .hero-img-3 {
+      bottom: -24%;
+      right: 80%;
+      width: 303px;
     }
   }
 }
