image urls changed

--- a/src/pages/Home/components/hero/hero.scss
+++ b/src/pages/Home/components/hero/hero.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/variable.scss';
 
 .hero-section {
-  background-image: url('src/assets/img/hero.png');
+  background-image: url('/img/hero.png');
   background-repeat: no-repeat;
   background-size: contain;
   height: 854px;
