landing page complete

--- a/src/pages/Home/components/about/about.scss
+++ b/src/pages/Home/components/about/about.scss
@@ -3,6 +3,10 @@
 .section-about {
   position: relative;
 
+  &-content {
+    max-width: 1800px;
+  }
+
   &-title {
     padding: 20px;
     display: flex;
