--- a/src/pages/Home/components/about/about.scss
+++ b/src/pages/Home/components/about/about.scss
@@ -86,6 +86,7 @@
         font-size: 16px;
         line-height: 21px;
         color: $clr_grey;
+        font-family: monospace;
       }
     }
   }
