--- a/src/pages/Home/components/hero/hero.scss
+++ b/src/pages/Home/components/hero/hero.scss
@@ -103,7 +103,7 @@
     &-menu {
       position: absolute;
       display: flex;
-      width: 100vw;
+      width: 110%;
       height: 100vh;
       top: -40%;
       left: -150%;
@@ -114,7 +114,7 @@
       transition: 0.3s ease-in-out;
 
       &-active {
-        left: -6%;
+        left: -5%;
       }
     }
   }
