--- a/src/pages/Home/components/news/news.scss
+++ b/src/pages/Home/components/news/news.scss
@@ -36,12 +36,16 @@
 
     img {
       width: 100%;
+      height: 280px;
       object-fit: cover;
     }
 
     div {
       padding: 16px;
 
+      a {
+        color: white;
+      }
       p {
         font-size: 18px;
         font-weight: 700;
